--- a/src/app/components/warning-modal/warning-modal.component.html
+++ b/src/app/components/warning-modal/warning-modal.component.html
@@ -2,28 +2,47 @@
 <div>
   <div class="fixed inset-0 bg-black opacity-50 z-40"></div>
   <div class="fixed inset-0 z-50 flex items-center justify-center">
-    <div class="bg-white rounded-lg shadow-lg max-w-md w-full p-4 md:p-5 text-center">
-      <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+    <div class="bg-white m-4 rounded-lg shadow-lg max-w-md w-full p-4 md:px-5 py-6 text-center">
+
+      @switch (actionType()) {
+      @case ('eliminar') {
+      <svg class="text-red-600  w-16 h-16 mb-3.5 mx-auto" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+        xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd"
+          d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
+          clip-rule="evenodd"></path>
+      </svg>
+      }
+      @case ('activar') {
+      <svg class="mx-auto mb-4 text-green-600 w-16 h-16 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+        fill="none" viewBox="0 0 20 20">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
           d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
       </svg>
-      <h2 class="text-lg font-semibold text-red-600">¿Estás seguro?</h2>
-      <p class="mt-2 text-sm text-gray-700">
+      }
+      @default {
+      <svg class="mx-auto mb-4 text-orange-400 w-16 h-16 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+        fill="none" viewBox="0 0 20 20">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+      </svg>
+      }
+      }
+      <h2 class="text-2xl font-bold text-gray-700">¿Estás seguro?</h2>
+      <p class="mt-2 text-lg  text-gray-700">
         Estás a punto de {{actionLabel()}} : <strong>{{ itemName() }}</strong>
       </p>
       <div class="flex justify-center mt-6 space-x-3 text-white">
-        <button data-modal-hide="popup-modal" type="button" (click)="onConfirm()"
-        [ngClass]="{
-          'bg-red-600 hover:bg-red-700 focus:ring-red-300 dark:focus:ring-red-800': actionType() === 'eliminar',
-          'bg-green-600 hover:bg-green-700 focus:ring-green-300 dark:focus:ring-green-800': actionType() === 'activar',
-          'bg-blue-600 hover:bg-blue-700 focus:ring-blue-300 dark:focus:ring-blue-800': actionType() === 'desactivar',
+        <button data-modal-hide="popup-modal" type="button" (click)="onConfirm()" [ngClass]="{
+          'bg-red-600 hover:bg-red-700  hover:border-red-300': actionType() === 'eliminar',
+          'bg-green-600 hover:bg-green-700  hover:border-green-300': actionType() === 'activar',
+          'bg-orange-500 hover:bg-orange-600  hover:border-orange-300': actionType() === 'desactivar',
         }"
-          class="focus:ring-4 focus:outline-none font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+          class="border-4 border-white font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
           {{actionLabel()}}
         </button>
         <button data-modal-hide="popup-modal" type="button" (click)="onCancel()"
-          class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-200 hover:border-gray-300 hover:text-gray-600 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+          class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none  bg-gray-300 rounded-lg border-4 border-white hover:bg-gray-200 hover:border-gray-300 hover:text-gray-600 focus:z-10 focus:ring-4 focus:ring-gray-100">
           Cancelar
         </button>
       </div>
@@ -31,3 +50,4 @@
   </div>
 </div>
 }
+
