--- a/src/app/pages/stores/contact-store-page/contact-store-page.component.html
+++ b/src/app/pages/stores/contact-store-page/contact-store-page.component.html
@@ -1,1 +1,13 @@
-<p>contact-store-page works!</p>,
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg px-4 lg:px-10 pb-8">
+  <div class="mb-6 text-gray-900 dark:text-white">
+    <h1 class="text-2xl font-semibold">Contactos</h1>
+    <p>Todo los productos integrados.</p>
+  </div>
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
+    @for (item of listContact; track $index) {
+  <tyn-card-contact-store-page [listContact]="item" ></tyn-card-contact-store-page>
+  }
+  </div>
+
+
+</div>
