--- a/src/app/pages/stores/init-store-page/init-store-page.component.html
+++ b/src/app/pages/stores/init-store-page/init-store-page.component.html
@@ -1,12 +1,12 @@
-<div class="relative overflow-x-auto sm:rounded-lg px-10">
-<div class="grid grid-cols-3 items-center m-8">
-  <div class="mb-6 text-gray-900 dark:text-white col-span-2">
+<div class="relative overflow-x-auto sm:rounded-lg ">
+<div class="grid lg:grid-cols-3 items-center m-8 bg-white rounded-lg p-8">
+  <div class="mb-6 text-gray-900 lg:col-span-2">
     <h1 class="text-2xl font-semibold">Bienvenido a Tynbiz</h1>
     <p class="mt-2">Tynbiz te permitira promocionar tus productos mediante creacion de contenido y dar una solucion rapida en atencion al cliente, a los usuarios en sus compras mediante sala de tynbiz</p>
     <p class="mt-2">Tynbiz ya esta integrado con tu tienda virtual </p>
     <p class="mt-2">Actualmente usas el plan de suscripcion</p>
   </div>
-  <div class="col-span-1">
+  <div class="lg:col-span-1 2xl:m-6 ">
     <img src="assets/img/u55.png" alt="">
   </div>
 </div>
