--- a/src/app/pages/stores/products-store-page/products-store-page.component.html
+++ b/src/app/pages/stores/products-store-page/products-store-page.component.html
@@ -1,34 +1,27 @@
-<div class="relative overflow-x-auto shadow-md sm:rounded-lg px-10">
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg px-10 pb-8">
   <div class="mb-6 text-gray-900 dark:text-white">
     <h1 class="text-2xl font-semibold">Productos</h1>
     <p>Todo los productos integrados.</p>
   </div>
-  <div>
+  <div class="bg-white rounded-lg border border-gray-300 dark:bg-gray-800 dark:border-gray-700">
     @for (product of products; track product.id) {
-    <div class="w-full flex justify-between pb-4">
-      <div class="flex items-center">
-        <div class="relative bg-white w-24 h-24 shrink-0 justify-center flex items-center rounded-lg">
-          <img class="h-20" [src]="product.image" alt="Jese Leos image" />
-        </div>
-        <div class="ms-3 text-sm font-normal">
-          <p class="text-sm font-normal text-gray-700 dark:text-gray-400">
-            {{ product.marca }}
-          </p>
-          <p class="text-sm font-bold text-gray-900 dark:text-white">
-            {{ product.nameProduct }}
-          </p>
-          <p class="text-sm font-normal text-gray-700 dark:text-gray-400">
-            Color: {{ product.color }} Talla: {{ product.talla }}
-          </p>
-          <p class="text-sm font-normal text-gray-700 dark:text-gray-400">
-            {{ product.price }}
-          </p>
-        </div>
-      </div>
-      <div class="ms-3 text-sm font-normal">
-        <a class="inline-flex text-sm items-center text-purple-600 hover:underline">
-          Ver detalle
-        </a>
+    <div class="w-full flex justify-between p-4 border-b border-gray-300 dark:border-gray-700">
+      <tyn-product-detail-card [listProduct]="product"></tyn-product-detail-card>
+      <div class="ms-3 text-sm font-normal items-center flex">
+          <button data-modal-hide="default-modal" type="button"
+            class="text-white inline-flex items-center  bg-purple-700 ml-4 hover:bg-purple-900 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-800">
+            <svg class="w-6 h-6 mr-2 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+              fill="currentColor" viewBox="0 0 24 24">
+              <path fill-rule="evenodd"
+                d="M2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10S2 17.523 2 12Zm11-4.243a1 1 0 1 0-2 0V11H7.757a1 1 0 1 0 0 2H11v3.243a1 1 0 1 0 2 0V13h3.243a1 1 0 1 0 0-2H13V7.757Z"
+                clip-rule="evenodd" />
+            </svg>
+            Agregar
+          </button>
+          <button data-modal-hide="default-modal" type="button"
+            class="text-white bg-gray-700 ml-4 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-gray-600 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
+            Ver
+          </button>
       </div>
     </div>}
   </div>
