--- a/src/app/pages/admin/list-user-admin-page/list-user-admin-page.component.html
+++ b/src/app/pages/admin/list-user-admin-page/list-user-admin-page.component.html
@@ -91,7 +91,7 @@
     <tbody>
       @if(usersResorce.hasValue()) {
       <!--  -->
-      @for (item of paginatedData; track item.id) {
+      @for (item of usersResorce.value().content; track item.id) {
       <tr
         class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
       >
@@ -102,30 +102,30 @@
           <div class="grid grid-cols-6 gap-1">
             <img
               class="w-10 h-10 rounded-full col-span-1"
-              [src]="item.img"
+              [src]="item?.urlImg"
               alt="Rounded avatar"
             />
             <div class="col-span-5">
-              {{ item.nameUser }}<br />
+              {{ item.nombre }}<br />
               <span class="text-gray-500 dark:text-gray-400">{{
-                item.email
+                item.correoElectronico
               }}</span>
             </div>
           </div>
         </th>
-        <td class="px-6 py-4">{{ item.rol }}</td>
+        <td class="px-6 py-4">{{ item.roles}}</td>
         <td class="px-6 py-4">
           <span
             class="inline-flex items-center text-xs font-medium px-2.5 py-0.5 rounded-full"
             [ngClass]="{
               'bg-green-100 text-green-800':
-                item.status == 'Activo',
+                item.estadoUsuarioIdc == 1,
               'bg-yellow-100 text-yellow-800':
-                item.status === 'Inactivo',
+                item.estadoUsuarioIdc === 0,
 
             }"
           >
-            {{ item.status }}
+            {{ item.estadoUsuarioIdc ? "Activo" : "Inactivo" }}
           </span>
         </td>
         <td class="px-6 py-4">
@@ -135,10 +135,10 @@
               'bg-green-100 text-green-800': item.twoConfirmation == true
             }"
           >
-            {{ item.twoConfirmation ? "Activado" : "" }}
+            {{ item?.twoConfirmation ? "Activado" : "" }}
           </span>
         </td>
-        <td class="px-6 py-4">{{ item.dateCreate | date : "medium" }}</td>
+        <td class="px-6 py-4">{{ item?.fechaCreacion | date : "medium" }}</td>
         <td class="px-6 py-4 text-center">
           <div class="relative inline-block">
             <!-- Icono de tres puntos (puedes usar un ícono o texto) -->
@@ -212,21 +212,23 @@
         </button>
       </li>
       <!-- Números de página generados dinámicamente -->
-      <li *ngFor="let page of [].constructor(totalPages()); let i = index">
+        @if(usersResorce.hasValue()){
+          @for (page of [].constructor(usersResorce.value().totalPages); track $index; let i = $index) {
+      <li>
         <button
           (click)="setPage(i + 1)"
           [ngClass]="{
             'z-10 text-purple-600 border-purple-400 bg-purple-300 hover:bg-purple-100 hover:text-purple-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white':
-              currentPage === i + 1,
+              page === i + 1,
             'text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white':
-              currentPage !== i + 1
+              page !== i + 1
           }"
           class="flex items-center justify-center px-3 h-8 leading-tight border"
         >
           {{ i + 1 }}
         </button>
-      </li>
-
+      </li>}
+}
       <li>
         <button
           (click)="nextPage()"
