--- a/src/app/pages/admin/list-user-admin-page/list-user-admin-page.component.html
+++ b/src/app/pages/admin/list-user-admin-page/list-user-admin-page.component.html
@@ -102,7 +102,7 @@
           <div class="grid grid-cols-6 gap-1">
             <img
               class="w-10 h-10 rounded-full col-span-1"
-              [src]="item?.urlImg"
+              [src]="item?.urlImg | notImage"
               alt="Rounded avatar"
             />
             <div class="col-span-5">
@@ -113,7 +113,7 @@
             </div>
           </div>
         </th>
-        <td class="px-6 py-4">{{ item.roles}}</td>
+        <td class="px-6 py-4">{{ item.roles }}</td>
         <td class="px-6 py-4">
           <span
             class="inline-flex items-center text-xs font-medium px-2.5 py-0.5 rounded-full"
@@ -212,8 +212,9 @@
         </button>
       </li>
       <!-- Números de página generados dinámicamente -->
-        @if(usersResorce.hasValue()){
-          @for (page of [].constructor(usersResorce.value().totalPages); track $index; let i = $index) {
+      @if(usersResorce.hasValue()){ @for (page of
+      [].constructor(usersResorce.value().totalPages); track $index; let i =
+      $index) {
       <li>
         <button
           (click)="setPage(i + 1)"
@@ -227,8 +228,8 @@
         >
           {{ i + 1 }}
         </button>
-      </li>}
-}
+      </li>
+      } }
       <li>
         <button
           (click)="nextPage()"
