--- a/src/app/pages/admin/list-user-admin-page/list-user-admin-page.component.html
+++ b/src/app/pages/admin/list-user-admin-page/list-user-admin-page.component.html
@@ -179,139 +179,84 @@
           </div>
         </td>
       </tr>
+      } @empty {
+      <td colspan="6" class="text-center py-4">No hay usuarios disponibles.</td>
       }
       <!--  -->
+      } @if(usersResorce.isLoading()) {
+      <tr>
+        <td colspan="6" class="text-center p-4">
+          <div class="alert alert-info text-center">
+            <span class="font-bold">Cargando usuarios...</span>
+          </div>
+        </td>
+      </tr>
       }
     </tbody>
   </table>
   <!-- Paginación -->
-  <nav aria-label="Page navigation example " class="my-6 flex justify-center">
-    <ul class="flex items-center -space-x-px h-8 text-sm">
-      <li>
-        <button
-          (click)="prevPage()"
-          [disabled]="currentPage === 1"
-          class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-        >
-          <span class="sr-only">Previous</span>
-          <svg
-            class="w-2.5 h-2.5 rtl:rotate-180"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 6 10"
-          >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M5 1 1 5l4 4"
-            />
-          </svg>
-        </button>
-      </li>
-      <!-- Números de página generados dinámicamente -->
-      @if(usersResorce.hasValue()){ @for (page of
-      [].constructor(usersResorce.value().totalPages); track $index; let i =
-      $index) {
-      <li>
-        <button
-          (click)="setPage(i + 1)"
-          [ngClass]="{
-            'z-10 text-purple-600 border-purple-400 bg-purple-300 hover:bg-purple-100 hover:text-purple-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white':
-              page === i + 1,
-            'text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white':
-              page !== i + 1
-          }"
-          class="flex items-center justify-center px-3 h-8 leading-tight border"
-        >
-          {{ i + 1 }}
-        </button>
-      </li>
-      } }
-      <li>
-        <button
-          (click)="nextPage()"
-          [disabled]="currentPage === totalPages()"
-          class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-        >
-          <span class="sr-only">Next</span>
-          <svg
-            class="w-2.5 h-2.5 rtl:rotate-180"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 6 10"
-          >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="m1 9 4-4-4-4"
-            />
-          </svg>
-        </button>
-      </li>
-    </ul>
-  </nav>
-</div>
+  @if(usersResorce.hasValue()){
+  <app-pagination
+    [pages]="usersResorce.value().totalPages"
+    [currentPage]="_paginationService.currentPage()"
+  />
+  }
 
-<!-- Modal -->
-@if (isModalOpen()) {
-<div
-  class="fixed inset-0 bg-black opacity-50 z-40"
-  (click)="closeModal()"
-></div>
-}
-<!-- Main modal -->
-<div
-  id="default-modal"
-  tabindex="-1"
-  aria-hidden="true"
-  [ngClass]="isModalOpen() ? 'block' : 'hidden'"
-  class="fixed inset-0 z-50 flex items-center justify-center"
->
+  <!-- Modal -->
+  @if (isModalOpen()) {
   <div
-    class="relative w-full max-w-3xl m-4 md:max-h-[90vh] bg-white rounded-lg shadow dark:bg-gray-700 overflow-hidden"
+    class="fixed inset-0 bg-black opacity-50 z-40"
+    (click)="closeModal()"
+  ></div>
+  }
+  <!-- Main modal -->
+  <div
+    id="default-modal"
+    tabindex="-1"
+    aria-hidden="true"
+    [ngClass]="isModalOpen() ? 'block' : 'hidden'"
+    class="fixed inset-0 z-50 flex items-center justify-center"
   >
-    <!-- Modal content -->
-    <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700">
-      <!-- Modal header -->
-      <div
-        class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600 border-gray-200"
-      >
-        <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
-          Crear Usuario
-        </h3>
-        <button
-          type="button"
-          (click)="closeModal()"
-          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
-          data-modal-hide="default-modal"
+    <div
+      class="relative w-full max-w-3xl m-4 md:max-h-[90vh] bg-white rounded-lg shadow dark:bg-gray-700 overflow-hidden"
+    >
+      <!-- Modal content -->
+      <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700">
+        <!-- Modal header -->
+        <div
+          class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600 border-gray-200"
         >
-          <svg
-            class="w-3 h-3"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 14 14"
+          <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+            Crear Usuario
+          </h3>
+          <button
+            type="button"
+            (click)="closeModal()"
+            class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+            data-modal-hide="default-modal"
           >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
-            />
-          </svg>
-          <span class="sr-only">Close modal</span>
-        </button>
+            <svg
+              class="w-3 h-3"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 14 14"
+            >
+              <path
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+              />
+            </svg>
+            <span class="sr-only">Close modal</span>
+          </button>
+        </div>
+        <!-- Modal body -->
+        <tyn-create-user-form />
       </div>
-      <!-- Modal body -->
-      <tyn-create-user-form />
     </div>
   </div>
+  <!-- End Modal content -->
 </div>
-<!-- End Modal content -->
