--- a/src/app/pages/admin/list-user-admin-page/list-user-admin-page.component.html
+++ b/src/app/pages/admin/list-user-admin-page/list-user-admin-page.component.html
@@ -199,6 +199,8 @@
   <app-pagination
     [pages]="usersResorce.value().totalPages"
     [currentPage]="_paginationService.currentPage()"
+    [currentSize]="_paginationService.currentSize()"
+    (changePageSelect)="cantPageChange($event)"
   />
   }
 
