feat: pagination select

--- a/src/app/pages/admin/list-user-admin-page/list-user-admin-page.component.html
+++ b/src/app/pages/admin/list-user-admin-page/list-user-admin-page.component.html
@@ -198,6 +198,7 @@
   @if(usersResorce.hasValue()){
   <app-pagination
     [pages]="usersResorce.value().totalPages"
+    [totalElements]="usersResorce.value().totalElements"
     [currentPage]="_paginationService.currentPage()"
     [currentSize]="_paginationService.currentSize()"
   />
