--- a/src/app/pages/admin/list-role-page/list-role-page.component.html
+++ b/src/app/pages/admin/list-role-page/list-role-page.component.html
@@ -90,7 +90,9 @@
       </tr>
     </thead>
     <tbody>
-      @for (item of paginatedData; track item.id) {
+      @if(rolesResorce.hasValue()) {
+      <!--  -->
+      @for (item of rolesResorce.value().content; track item.id) {
       <tr
         class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
       >
@@ -98,102 +100,52 @@
           scope="row"
           class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
         >
-          {{ item.name }}
+          {{ item.denominacion }}
         </th>
-        <td class="px-6 py-4">{{ item.description }}</td>
-        <td class="px-6 py-4">{{ item.dateCreate | date : "medium" }}</td>
+        <td class="px-6 py-4">{{ item.descripcion }}</td>
+        <td class="px-6 py-4">{{ item.fechaCreacion | date : "medium" }}</td>
         <td class="px-6 py-4">
           <span
             class="inline-flex items-center text-xs font-medium px-2.5 py-0.5 rounded-full"
             [ngClass]="{
               'bg-red-100 text-red-800':
-                item.status == 'Activo',
+                item.estadoIdc === 2,
               'bg-yellow-100 text-yellow-800':
-                item.status === 'Inactivo',
+                item.estadoIdc !== 2,
 
             }"
           >
-            {{ item.status }}
+            {{ item.estadoIdc === 2 ? "Activo" : "Inactivo" }}
           </span>
         </td>
-        <td class="px-6 py-4 text-center">{{ item.cantHabitity }}</td>
-        <td class="px-6 py-4 text-center">{{ item.cantSuspenden }}</td>
+        <td class="px-6 py-4 text-center">-</td>
+        <td class="px-6 py-4 text-center">-</td>
         <td class="px-6 py-4 text-center">....</td>
+      </tr>
+      } @empty {
+      <td colspan="6" class="text-center py-4">No hay usuarios disponibles.</td>
+      }
+      <!--  -->
+      } @if(rolesResorce.isLoading()) {
+      <tr>
+        <td colspan="6" class="text-center p-4">
+          <div class="alert alert-info text-center">
+            <span class="font-bold">Cargando usuarios...</span>
+          </div>
+        </td>
       </tr>
       }
     </tbody>
   </table>
   <!-- Paginación -->
-  <nav aria-label="Page navigation example " class="my-6 flex justify-center">
-    <ul class="flex items-center -space-x-px h-8 text-sm">
-      <li>
-        <button
-          (click)="prevPage()"
-          [disabled]="currentPage === 1"
-          class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-        >
-          <span class="sr-only">Previous</span>
-          <svg
-            class="w-2.5 h-2.5 rtl:rotate-180"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 6 10"
-          >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M5 1 1 5l4 4"
-            />
-          </svg>
-        </button>
-      </li>
-      <!-- Números de página generados dinámicamente -->
-      @for (page of [].constructor(totalPages()); track page; let i = $index) {
-      <li>
-        <button
-          (click)="setPage(i + 1)"
-          [ngClass]="{
-            'z-10 text-purple-600 border-purple-400 bg-purple-300 hover:bg-purple-100 hover:text-purple-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white':
-              currentPage === i + 1,
-            'text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white':
-              currentPage !== i + 1
-          }"
-          class="flex items-center justify-center px-3 h-8 leading-tight border"
-        >
-          {{ i + 1 }}
-        </button>
-      </li>
-      }
-
-      <li>
-        <button
-          (click)="nextPage()"
-          [disabled]="currentPage === totalPages()"
-          class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-        >
-          <span class="sr-only">Next</span>
-          <svg
-            class="w-2.5 h-2.5 rtl:rotate-180"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 6 10"
-          >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="m1 9 4-4-4-4"
-            />
-          </svg>
-        </button>
-      </li>
-    </ul>
-  </nav>
+  @if(rolesResorce.hasValue()){
+  <app-pagination
+    [pages]="rolesResorce.value().totalPages"
+    [totalElements]="rolesResorce.value().totalElements"
+    [currentPage]="_paginationService.currentPage()"
+    [currentSize]="_paginationService.currentSize()"
+  />
+  }
 </div>
 
 <!-- Modal -->
