--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -60,7 +60,7 @@
           </li>
           <li>
             <a
-              (click)="logout()"
+              (click)="_authService.logoutAndReload()"
               class="cursor-pointer block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"
               >Cerrar sesión</a
             >
